minor edits to fa24 final sols

--- a/problems/fa24-final/q01.md
+++ b/problems/fa24-final/q01.md
@@ -4,7 +4,7 @@ An expensive product is one that costs **at least \$100**.
 
 # BEGIN SUBPROB
 
-Fill in the blank below with an expression that evaluates to the
+Write an expression that evaluates to the
 **proportion** of products in `skin` that are expensive.
 
 # BEGIN SOLUTION
