--- a/problems/fa24-final/q03.md
+++ b/problems/fa24-final/q03.md
@@ -13,7 +13,7 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-`vc.iloc[0]`?
+`vc.iloc[0]`
 
 ( ) `0`
 ( ) `1`
