--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -85,6 +85,62 @@ $\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$
 
 **Answer**: $$\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$$
 
+The design matrix $U$ is defined as:
+$$
+U =
+\begin{bmatrix}
+1 & -x_1 \\
+1 & -x_2 \\
+\vdots & \vdots \\
+1 & -x_n
+\end{bmatrix}
+$$
+where 1 represents the intercept term, and $-x_i$ represents the negative price of product $i$. Thus:
+
+$$
+U^T U =
+\begin{bmatrix}
+1 & 1 & \cdots & 1 \\
+-x_1 & -x_2 & \cdots & -x_n
+\end{bmatrix}
+\begin{bmatrix}
+1 & -x_1 \\
+1 & -x_2 \\
+\vdots & \vdots \\
+1 & -x_n
+\end{bmatrix}
+$$
+
+When we multiply this out, we get: 
+$$
+U^T U =
+\begin{bmatrix}
+n & -\sum x_i \\
+-\sum x_i & \sum x_i^2
+\end{bmatrix}
+$$
+
+Conceptually, this matrix represents:
+$$
+\begin{bmatrix}
+\text{Number of elements} & \text{Sum of the negative values of the data} \\
+\text{Sum of the negative values of the data} & \text{Sum of squared values of the data}
+\end{bmatrix}.
+$$
+
+We know that the sum of all elements in a series is equal to the mean of the series multiplied by the number of elements in the series.
+$$
+\Sigma x_i = n \cdot \bar{x}
+$$
+
+$\bar{x}$ is equal to $40$. The first element in the matrix, $15$, represents the number of elements in the series. Thus, $\Sigma x_i = 40 \times 15$, and the solution must be as follows: 
+
+$$\begin{bmatrix}
+n & -\sum x_i \\
+-\sum x_i & \sum x_i^2
+\end{bmatrix} = 
+\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$$
+
 # END SOLUTION
 
 # END SUBPROB
