problem 8.3 solution fix on final

--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -133,7 +133,7 @@ $$
 \Sigma x_i = n \cdot \bar{x}
 $$
 
-$\bar{x}$ is equal to $40$. The first element in the matrix, $15$, represents the number of elements in the series. Thus, $\Sigma x_i = 40 \times 15$, and the solution must be as follows: 
+$\bar{x}$ is equal to $40$. The first element in the matrix, $15$, represents the number of elements in the series. Thus, $\Sigma x_i = 40 \times 15 = 600$, and the solution must be as follows: 
 
 $$\begin{bmatrix}
 n & -\sum x_i \\
