added averages to final

--- a/problems/fa24-final/q01.md
+++ b/problems/fa24-final/q01.md
@@ -25,6 +25,8 @@ Alternatively, we can:
 
 Both approaches yield the same result.
 
+<average>90</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -72,6 +74,8 @@ Alternative forms for `(iii)` include:
 - `lambda x: np.sum(x['Price'] >= 100) < 5`  
 - `lambda x: x[x['Price'] >= 100].shape[0] < 5`  
 - `lambda x: x[x['Price'] >= 100].count() < 5`
+
+<average>72</average>
 
 # END SOLUTION
 
