--- a/problems/fa24-final/q02.md
+++ b/problems/fa24-final/q02.md
@@ -11,6 +11,8 @@ keyword for querying is \_\_(ii)\_\_.
 
 An important distinction to make for part `(ii)` is that we're asking about the keyword for **querying**. `SELECT` is incorrect, as `SELECT` is for specifying a subset of **columns**, whereas querying is for specifying a subset of **rows**.
 
+<average>81</average>
+
 # END SOLUTION
 
 # END PROB
