--- a/problems/fa24-final/q03.md
+++ b/problems/fa24-final/q03.md
@@ -36,6 +36,7 @@ expression evaluates to. If the expression errors, select "Error\".
 - `iloc[0]` retrieves the **value** at **integer position** 0 in `vc`. Remember that position can be different than index for a Series: for this Series, the indices are `36, 1, 18, 100`, whereas the **integer positions** are `0, 1, 2, 3`.
 - The result is `4`.
 
+<average>73</average>
 
 # END SOLUTION
 
@@ -65,6 +66,7 @@ expression evaluates to. If the expression errors, select "Error\".
 - `loc[0]` attempts to retrieve the **value** associated with the **index** `0` in `vc`.
 - Since `vc` has indices `36, 1, 18, 100`, and `0` is not a valid index, this operation results in an error.
 
+<average>83</average>
 
 # END SOLUTION
 
@@ -93,6 +95,8 @@ expression evaluates to. If the expression errors, select "Error\".
 
 - `index[0]` retrieves the first **index** in `vc`, which corresponds to the value `36`.`
 
+<average>69</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -119,6 +123,8 @@ expression evaluates to. If the expression errors, select "Error\".
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
 - `iloc[1]` retrieves the **value** at **integer position** 1 in `vc`, which is `3`. 
+
+<average>74</average>
 
 # END SOLUTION
 
@@ -147,6 +153,8 @@ expression evaluates to. If the expression errors, select "Error\".
 - `loc[1]` retrieves the **value** associated with the **index** `1` in `vc`, which corresponds to the frequency of the value `1` in `small_prices`.
 - The result is `3`.
 
+<average>80</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -173,6 +181,8 @@ expression evaluates to. If the expression errors, select "Error\".
 
 - `index[1]` retrieves the positionally second index in `vc`.
 - The result is `1`.
+
+<average>64</average>
 
 # END SOLUTION
 
