--- a/problems/fa24-final/q05.md
+++ b/problems/fa24-final/q05.md
@@ -163,6 +163,9 @@ $$
 This results in a value for $n$ that is not an integer. 
 
 **This is NOT possible.**
+
+<average>80</average>
+
 # END SOLUTION
 
 # END PROB
