--- a/problems/fa24-final/q06.md
+++ b/problems/fa24-final/q06.md
@@ -68,6 +68,8 @@ In this structure, the `"prod"` attribute contains the value `"thing"`, and the 
 **Option 4**:
 In this structure, the product names are part of the text content inside the `<row>` tags. `row.get("prod")` would return `None`.
 
+<average>76</average>
+
 # END SOLUTION
 
 # END PROB
