--- a/problems/fa24-final/q07.md
+++ b/problems/fa24-final/q07.md
@@ -30,6 +30,9 @@ $h_0^*$
 **Answer**: The mode of the data
 
 The minimizer of empirical risk for the constant model when using zero-one loss is the mode. 
+
+<average>100</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -50,6 +53,8 @@ $h_1^*$
 **Answer**: The median of the data 
 
 The minimizer of empirical risk for the constant model when using absolute loss is the median.
+
+<average>87</average>
 
 # END SOLUTION
 
@@ -75,6 +80,9 @@ The minimizer of empirical risk for $R_1(h_1^*)$ is the sum of absolute deviatio
 $R_1(h_1^*)$ represents the sum of absolute deviations from the median divided by $n$:
 
 $$R_1(h_1^*) = \frac{1}{n} \sum_{i=1}^n |y_i - h_1^*|$$
+
+<average>44</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -95,6 +103,8 @@ $h_2^*$
 **Answer**: The mean of the data
 
 The minimizer of empirical risk for the constant model when using squared loss is the mean.
+
+<average>81</average>
 
 # END SOLUTION
 
@@ -121,6 +131,8 @@ $R_2(h_2^*)$ represents the mean squared error:
 
 $$ R_2(h_2^*) = \frac{1}{n} \sum_{i=1}^n (y_i - h_2^*)^2 $$
 
+<average>70</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -146,6 +158,8 @@ the data, $M$?
 **Answer**: $h_\text{U}^* \geq M$
 
 Since we're multiplying by $y_i$, the Ulta loss function skews the optimal prediction higher to reduce the impact of larger $y_i$ values on the loss. 
+
+<average>42</average>
 
 # END SOLUTION
 
@@ -194,6 +208,9 @@ Solve for $h$:
 $$ h^* = \frac{\frac{1}{n} \sum_{i = 1}^n y_i^2}{\frac{1}{n} \sum_{i = 1}^n y_i + \lambda} $$
 
 $$ h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda} $$
+
+<average>71</average>
+
 # END SOLUTION
 
 # END SUBPROB
