--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -35,7 +35,7 @@ $$
 L = (\hat{y} - y)^2 = (15 - 11)^2 = 4^2 = 16
 $$
 
-
+<average>86</average>
 
 # END SOLUTION
 
@@ -55,6 +55,8 @@ part (a).
 **Answer**: Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to part (a).
 
 To answer part (a), we only need to know the average values $\bar{x}$ and $\bar{y}$, as the regression line will always pass through $(\bar{x}, \bar{y})$. 
+
+<average>56</average>
 
 # END SOLUTION
 
@@ -140,6 +142,8 @@ n & -\sum x_i \\
 -\sum x_i & \sum x_i^2
 \end{bmatrix} = 
 \begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$$
+
+<average>74</average>
 
 # END SOLUTION
 
