--- a/problems/fa24-final/q09.md
+++ b/problems/fa24-final/q09.md
@@ -43,6 +43,8 @@ Columns: **22**
 
 Model A includes an intercept, the price feature, and a one-hot encoding of the 20 brands without dropping the first category. The intercept adds 1 column, the price adds 1 column, and the one-hot encoding for brands adds 20 columns.
 
+<average>80</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -62,6 +64,8 @@ Rank: **2**
 
 Model B includes an intercept and the price feature, but no one-hot encoding for the brands or product types. The intercept and price are linearly independent, resulting in both the number of columns and the rank being 2.
 
+<average>82</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -80,6 +84,8 @@ Columns: **8**
 Rank: **7**
 
 Model C includes an intercept, the price feature, and a one-hot encoding of the 6 product types without dropping the first category. The intercept adds 1 column, the price adds 1 column, and the one-hot encoding for the product types adds 6 columns. However, one column is linearly dependent because we didn't drop one of the one-hot encoded columns, reducing the rank to 7.
+
+<average>81</average>
 
 # END SOLUTION
 
@@ -106,6 +112,8 @@ training set.*
 For residuals to sum to zero in a linear regression model, the design matrix  must include either an intercept term (Models A - C) or equivalent redundancy in the encoded variables to act as a substitute for the intercept (Model E). Models that lack both an intercept and equivalent redundancy, such as Model D, are not guaranteed to have residuals sum to zero.
 
 One-hot encoding without dropping any category can behave like an intercept because it introduces a column for each category, allowing the model to adjust its predictions as if it had an intercept term. The sum of the indicator variables in such a setup equals 1 for every row, creating a similar effect to an intercept, which is why residuals may sum to zero in these cases. 
+
+<average>60</average>
 
 # END SOLUTION
 
