--- a/problems/fa24-final/q10.md
+++ b/problems/fa24-final/q10.md
@@ -49,6 +49,8 @@ used to train the model?
 
 In $K$-fold cross-validation, the data is split into $K$ folds. Each time a model is trained, one fold is used for validation, and the remaining $K-1$ folds are used for training. Since $N$ is evenly split among $K$ folds, each fold contains $\frac{N}{K}$ points. The training data, therefore, consists of $N - \frac{N}{K} = N \times \frac{K-1}{K}$ points.
 
+<average>72</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -64,7 +66,7 @@ time**? Assume that these two points are in different folds.
 
 In K-fold cross-validation, `X_{\text{train}}.\text{iloc}[1]` and `X_{\text{train}}.\text{iloc}[-1]` are in different folds and can only be used together for training when neither of their respective folds is the validation set. This happens in $(K-2)$ folds for each combination of polynomial degree ($D$) and regularization hyperparameter ($L$). Since there are $L \times D$ total combinations in the grid search, the two points are used together for training $LD \times (K-2)$ times.
 
-
+<average>53</average>
 
 # END SOLUTION
 
