--- a/problems/fa24-final/q11.md
+++ b/problems/fa24-final/q11.md
@@ -28,6 +28,8 @@ variance?
 
 As $\lambda$ increases, the $L_1$ regularization penalizes the model more heavily for including features, effectively reducing the number of non-zero coefficients in the model. This decreases model complexity. Additionally, by reducing complexity, the model becomes less sensitive to the training data, leading to lower variance.
 
+<average>64</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -44,6 +46,8 @@ What does the value $A$ on the graph above correspond to?
 **Answer**: The AVMSE of an unregularized multiple linear regression model.
 
 Point $A$ represents the case where $\lambda = 0$, meaning no regularization is applied. This corresponds to an unregularized multiple linear regression model.
+
+<average>80</average>
 
 # END SOLUTION
 
@@ -62,6 +66,8 @@ What does the value $B$ on the graph above correspond to?
 
 Point $B$ is the minimum point on the graph, indicating the optimal $\lambda$ value that minimizes the AVMSE. This is the $\lambda$ we’d choose to train the model.
 
+<average>91</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -78,6 +84,8 @@ What does the value $C$ on the graph above correspond to?
 **Answer**: The AVMSE of the constant model.
 
 Point $C$ represents the AVMSE when $\lambda$ is very large, effectively forcing all coefficients to zero. This corresponds to the constant model.
+
+<average>83</average>
 
 # END SOLUTION
 
