--- a/problems/fa24-final/q12.md
+++ b/problems/fa24-final/q12.md
@@ -38,6 +38,9 @@ Which model does Decision Boundary 1 correspond to?
 **Answer**: Logistic Regression
 
 Logistic regression creates a linear divide between classes. 
+
+<average>93</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -58,6 +61,8 @@ Which model does Decision Boundary 2 correspond to?
 We know that Decision Boundaries 2 and 5 are decision trees, since the decision boundaries are parallel to the axes. Decision boundaries for decision trees are parallel to axes because the tree splits the feature space based on one feature at a time, creating partitions aligned with that feature's axis (e.g., "Price ≤ 100" results in a vertical split).
 
 Decision Boundary 2 is more complicated than Decision Boundary 5, so we can assume there are more levels. 
+
+<average>82</average>
 
 # END SOLUTION
 
@@ -81,6 +86,9 @@ $k$-nearest neighbors decision boundaries don't follow straight lines like logis
 Boundary 3 seems to be more fit to the data than boundary 4, so we can assume that we used a decision tree with $\text{max depth} = 3$. 
 
 For example, if in our training data we had 3 points in the group represented by the light-shaded region at $(300, 150)$, the decision boundary for $k$-nearest neighbors with $k = 3$ would be light-shaded at $(300, 150)$, whereas it may be dark-shaded for $k$-nearest neighbors with $k = 100$. 
+
+<average>59</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -102,7 +110,7 @@ $k$-nearest neighbors decision boundaries don't follow straight lines like logis
 
 Boundary 3 seems to be less fit to the data than boundary 4, so we can assume that we used a decision tree with $\text{max depth} = 100$. 
 
-
+<average>56</average>
 
 # END SOLUTION
 
