--- a/problems/fa24-final/q14.md
+++ b/problems/fa24-final/q14.md
@@ -84,6 +84,8 @@ $$
 \boxed{\frac{35}{40}}
 $$
 
+<average>85</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -134,6 +136,8 @@ $$
 \boxed{60}
 $$
 
+<average>90</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -160,6 +164,9 @@ From the confusion matrices:
 $$
 \boxed{A > C > B}
 $$
+
+<average>67</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -174,6 +181,9 @@ or a false negative.
 
 # BEGIN SOLUTION
 A false positive is worse, as it would mean we predict a product is safe when it isn't; someone with sensitive skin may use it and it could harm them.
+
+<average>91</average>
+
 # END SOLUTION
 
 # END SUBPROB
