--- a/problems/fa24-final/q15.md
+++ b/problems/fa24-final/q15.md
@@ -41,6 +41,7 @@ $$
 \nabla Q(\vec{x}) = \begin{bmatrix} 2(x_1 - x_2) \\ -2x_1 + 6x_2 \end{bmatrix}
 $$
 
+<average>87</average>
 
 # END SOLUTION
 
@@ -107,6 +108,8 @@ Solve for $\alpha$:
 $$
 -4 = 1 - 4\alpha \implies 4\alpha = 5 \implies \alpha = \frac{5}{4}
 $$
+
+<average>86</average>
 
 # END SOLUTION
 
