--- a/problems/fa24-final/q04.md
+++ b/problems/fa24-final/q04.md
@@ -53,6 +53,8 @@ The inner join will match these rows based on `Type`. Since there are 2 rows in 
 
 The total number of rows in the resulting DataFrame is $$6 + 4 = 10$$.
 
+<average>42</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -93,6 +95,8 @@ Remember that our pivot_table `aggfunc` is calculating `lambda s: s.shape[0] + 1
 
 ### Final Calculation:
 $$5 · 1 + 3 · 1 + 2 · 3 · 3 + 2 · 2 + 1 = 31$$
+
+<average>27</average>
 
 # END SOLUTION
 
