updated solution to problem 6 fa-24 final

--- a/problems/fa24-final/q06.md
+++ b/problems/fa24-final/q06.md
@@ -1,15 +1,15 @@
 # BEGIN PROB
 
-Suppose `soup` is a BeautifulSoup object representing the homepage of
-`wolfskin.com`, a Sephora competitor.
+Suppose `soup` is a BeautifulSoup object representing the homepage of 
+a Sephora competitor.
 
 Furthermore, suppose `prods`, defined below, is a list of strings
 containing the name of every product on the site.
-
+```py
     prods = [row.get("prod") for row in soup.find_all("row", class_="thing")]
-
+```
 Given that `prods[1]` evaluates to `"Cleansifier"`, which of the
-following options describes the source code of `wolfskin.com`?
+following options describes the source code of the site?
 
 -   Option 1:
 
@@ -47,26 +47,23 @@ following options describes the source code of `wolfskin.com`?
 # BEGIN SOLUTION
 **Answer**: Option 2
 
-**Explanation**:
-
-The given code:
-
-`prods = [row.get("prod") for row in soup.find_all("row", class_="thing")]`
-
+The given code:  
+```py
+prods = [row.get("prod") for row in soup.find_all("row", class_="thing")]
+```
 retrieves all `<row>` elements with the class `"thing"` and extracts the value of the `"prod"` attribute for each.
 
-**Option 1**:
-In this structure, the product names appear as text content within the `<row>` tags, not as an attribute. `row.get("prod")` would return `None`.
+- **Option 1**:  
+  In this structure, the product names appear as text content within the `<row>` tags, not as an attribute. `row.get("prod")` would return `None`.
 
-**Option 2**:
-Here, the product names are stored as the value of the `"prod"` attribute. `row.get("prod")` successfully retrieves these values.
+- **Option 2**:  
+  Here, the product names are stored as the value of the `"prod"` attribute. `row.get("prod")` successfully retrieves these values.
 
-**Option 3**:
-In this structure, the `"prod"` attribute contains the value `"thing"`, and the product names are stored as the value of the `"class"` attribute. `soup.find_all("row", class_="thing")` will not retrieve any of these tags since there are no tags with `class="thing"`.
+- **Option 3**:  
+  In this structure, the `"prod"` attribute contains the value `"thing"`, and the product names are stored as the value of the `"class"` attribute. `soup.find_all("row", class_="thing")` will not retrieve any of these tags since there are no tags with `class="thing"`.
 
-
-**Option 4**:
-In this structure, the product names are part of the text content inside the `<row>` tags. `row.get("prod")` would return `None`.
+- **Option 4**:  
+  In this structure, the product names are part of the text content inside the `<row>` tags. `row.get("prod")` would return `None`.
 
 <average>76</average>
 
