--- a/problems/disc03/dsc80-wi24-mid-13-14.md
+++ b/problems/disc03/dsc80-wi24-mid-13-14.md
@@ -35,12 +35,16 @@ most_common = ____
 dogs["district"].value_counts().idxmax()
 ```
 
-Above, we presented one possible solution, but there are many:
+To find the most common district in the `dogs` DataFrame, the solution uses the `value_counts()` method, which counts the occurrences of each unique value in the `district` column. The `idxmax()` method is then used to identify the index of the maximum value in the resulting series, which corresponds to the most frequent district. Above, we presented one possible solution, but there are many:
 
-- `dogs["district"].value_counts().idxmax()`
-- `dogs["district"].value_counts().index[0]`
-- `dogs.groupby("district").size().sort_values(ascending=False).index[0]`
-- `dogs.groupby("district").count()["owner_id"].sort_values(ascending=False).index[0]`
+- `dogs["district"].value_counts().index[0]`  
+   Directly selects the first district in the sorted counts.
+
+- `dogs.groupby("district").size().sort_values(ascending=False).index[0]`  
+   Groups by `district`, counts rows in each group, sorts by count, and retrieves the first district.
+
+- `dogs.groupby("district").count()["owner_id"].sort_values(ascending=False).index[0]`  
+   Counts non-NaN values of `owner_id` for each district, sorts by count, and retrieves the first district.
 
 # END SOLUTION
 
@@ -66,7 +70,8 @@ loc[dogs["dog_sex"] == "f", "primary_breed"]
 Another possible answer is:
 
 ```py
-query("dog_sex == 'f'")["primary_breed"]`
+query("dog_sex == 'f'")["primary_breed"]
+```
 
 Note that the question _didn't_ ask for unique primary breeds.
 
